[package]
name = "grey"
version = "0.1.0"
author = "coswat"
license = "MIT"
description = "Grey is a minimal package to build console applications"
edition = "2021"
repository = "https://github.com/coswat/grey/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
